--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -87,17 +87,14 @@
 
                     <a name="preferences"></a>
                     <h3>Configuration</h3>
-                    <ul>
-                        <li>Go to <b>Run/Debug-Launching-VisualVM Configuration</b> <a href="images/eclipse/preferences.png" rel="lightbox[eclipselauncher]" title="VisualVM launcher configuration." target="_new">preferences section</a>
-                            <p>
-                                Here you can modify:
-                                <ul>
-                                    <li>JDK Home to be used by VisualVM</li>
-                                    <li>The path to VisualVM executable (VisualVM 1.1+ is supported)</li>
-                                </ul>
-                            </p>
-                        </li>
-                    </ul>
+                    <p>
+                        Go to <b>Run/Debug-Launching-VisualVM Configuration</b> <a href="images/eclipse/preferences.png" rel="lightbox[eclipselauncher]" title="VisualVM launcher configuration." target="_new">preferences section</a><br>
+                        Here you can modify:
+                        <ul>
+                            <li>JDK Home to be used by VisualVM</li>
+                            <li>The path to VisualVM executable (VisualVM 1.1+ is supported)</li>
+                        </ul>
+                    </p>
                 </div>
             </div>
 
