Eclipse launcher document: added download link
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1666 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -110,7 +110,8 @@
 
                 <h3>Quick Links</h3>
                 <div>
-                    <a href="features.html">Features</a>
+                    <a href="features.html">VisualVM Features</a>
+                    <a href="download.html">Download VisualVM</a>
                     <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
                     <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
                 </div>
