--- a/www/releases.html
+++ b/www/releases.html
@@ -77,18 +77,15 @@
                 <center style="margin-top: 15px; margin-bottom: 15px;">
                     <table id="reltable" border="1">
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
+                        <!--tr>
+                            <td>
+                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: XXX Xxx, XXXX, <a href="relnotes.html">Release Notes</a></small></div>
+                            </td>
 
-                        <tr>
                             <td>
-                                <div><b>VisualVM 1.0</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="relnotes10.html">Release Notes</a></small></div>
+                                <div>not released yet</div>
                             </td>
-                            
-                            <td>
-                                <div><b>JDK 6 Update 7</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="http://java.sun.com/javase/6/webnotes/6u7.html">Release Notes</a></small></div>
-                                <hr>
-                                <div><b>JDK 6 Update 10</b><br><small style="margin-left: 10px;">Released: October 15th, 2008, <a href="http://java.sun.com/javase/6/webnotes/6u10.html">Release Notes</a></small></div>
-                            </td>
-                        </tr>
+                        </tr-->
 
                         <tr>
                             <td>
@@ -100,15 +97,17 @@
                             </td>
                         </tr>
 
-                        <!--tr>
+                        <tr>
                             <td>
-                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: XXX Xxx, XXXX, <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.0</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="relnotes10.html">Release Notes</a></small></div>
                             </td>
-
+                            
                             <td>
-                                <div></div>
+                                <div><b>JDK 6 Update 10</b><br><small style="margin-left: 10px;">Released: October 15th, 2008, <a href="http://java.sun.com/javase/6/webnotes/6u10.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 6 Update 7</b><br><small style="margin-left: 10px;">Released: July 8th, 2008, <a href="http://java.sun.com/javase/6/webnotes/6u7.html">Release Notes</a></small></div>
                             </td>
-                        </tr-->
+                        </tr>
                     </table>
                 </center>
             </div>
