Eclipse launcher requires JDK
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1693 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -91,7 +91,7 @@
                         Go to <b>Run/Debug-Launching-VisualVM Configuration</b> <a href="images/eclipse/preferences.png" rel="lightbox[eclipselauncher]" title="VisualVM launcher configuration." target="_new">preferences section</a><br>
                         Here you can modify:
                         <ul>
-                            <li>JDK Home to be used by VisualVM</li>
+                            <li>JDK Home to be used by VisualVM (needs to be a JDK, not JRE)</li>
                             <li>The path to VisualVM executable (VisualVM 1.1+ is supported)</li>
                         </ul>
                     </p>
