EclLaunch: minor tweaks
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1697 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -49,13 +49,13 @@
                     <h1>Eclipse launcher for VisualVM</h1>
 
                     <p>
-                        The Eclipse launcher for VisualVM is an Eclipse plugin to make the monitoring and profiling Eclipse projects using
+                        The Eclipse launcher for VisualVM is an Eclipse plugin to make monitoring and profiling Eclipse projects using
                         VisualVM more convenient to the IDE users. It starts the VisualVM tool along with the monitored application and
                         automatically opens the application tab after VisualVM startup.
                     </p>
 
                     <p style="margin-bottom: 15px;">
-                        <b>Note: </b> The Eclipse launcher for VisualVM supports VisualVM 1.1 and newer, it won't work with the older tool releases.
+                        <b>Note: </b> The Eclipse launcher for VisualVM supports VisualVM 1.1 and newer, it won't work correctly with the older tool releases.
                     </p>
 
                     <a name="download"></a>
