EclLaunch: 1/ install 2/ configure 3/ use
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1698 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -64,14 +64,26 @@
                         <div><a href="https://visualvm.dev.java.net/files/documents/7163/119087/visualvm-launcher.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher</span></a> (.zip, 32kB)</div>
                     </div>
 
-                    <a style="clear: both;" name="installation"></a>
+                    <a name="installation"></a>
                     <h3>Installation</h3>
                     <div>
                         <ol>
                             <li>Unzip the archive into your Eclipse installation directory</li>
                         </ol>
                     </div>
-                    <a style="clear: both;" name="usage"></a>
+
+                    <a name="preferences"></a>
+                    <h3>Configuration</h3>
+                    <p>
+                        Go to <b>Run/Debug-Launching-VisualVM Configuration</b> <a href="images/eclipse/preferences.png" rel="lightbox[eclipselauncher]" title="VisualVM launcher configuration." target="_new">preferences section</a><br>
+                        Here you can modify:
+                    </p>
+                    <ul>
+                        <li>JDK Home to be used by VisualVM (needs to be a JDK, not JRE)</li>
+                        <li>The path to VisualVM executable (VisualVM 1.1+ is supported)</li>
+                    </ul>
+                    
+                    <a name="usage"></a>
                     <h3>Usage</h3>
                     <div>
                         <ol>
@@ -84,17 +96,6 @@
                             <li>Run/Debug the application with the created configuration to have VisualVM started automatically</li>
                         </ol>
                     </div>
-
-                    <a name="preferences"></a>
-                    <h3>Configuration</h3>
-                    <p>
-                        Go to <b>Run/Debug-Launching-VisualVM Configuration</b> <a href="images/eclipse/preferences.png" rel="lightbox[eclipselauncher]" title="VisualVM launcher configuration." target="_new">preferences section</a><br>
-                        Here you can modify:
-                        <ul>
-                            <li>JDK Home to be used by VisualVM (needs to be a JDK, not JRE)</li>
-                            <li>The path to VisualVM executable (VisualVM 1.1+ is supported)</li>
-                        </ul>
-                    </p>
                 </div>
             </div>
 
@@ -104,8 +105,8 @@
                 <div>
                     <a href="#download">Download</a>
                     <a href="#installation">Installation</a>
-                    <a href="#usage">Usage</a>
                     <a href="#preference">Configuration</a>
+                    <a href="#usage">Usage</a>
                 </div>
 
                 <h3>Quick Links</h3>
