EclLaunch: fixed link to Configuration
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1699 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -105,7 +105,7 @@
                 <div>
                     <a href="#download">Download</a>
                     <a href="#installation">Installation</a>
-                    <a href="#preference">Configuration</a>
+                    <a href="#preferences">Configuration</a>
                     <a href="#usage">Usage</a>
                 </div>
 
