Testing how linking new JavaDoc works in the CollabNet framework
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1700 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/docindex.html
+++ b/www/docindex.html
@@ -96,7 +96,7 @@
                 <ul>
                     <li><a href="api-quickstart.html">Getting Started Extending VisualVM</a></li>
                     <li><a href="api-faq.html">VisualVM API FAQs</a></li>
-                    <li><a href="https://visualvm.dev.java.net/files/documents/7163/88802/visualvm_beta_docs.zip">API Docs Zip</a></li>
+                    <li><a href="nonav/apidocs/11/index.html">API Documentation</a></li>
                 </ul>
             </div>
             
