--- a/www/releases.html
+++ b/www/releases.html
@@ -77,15 +77,15 @@
                 <center style="margin-top: 15px; margin-bottom: 15px;">
                     <table id="reltable" border="1">
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
-                        <!--tr>
+                        <tr>
                             <td>
-                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: XXX Xxx, XXXX, <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.1</b><br><small style="margin-left: 10px;">Released: Dec 8th, 2008, <a href="relnotes.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
                                 <div>not released yet</div>
                             </td>
-                        </tr-->
+                        </tr>
 
                         <tr>
                             <td>
