Frontpage: disabling setBannerImage()
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1705 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -307,7 +307,7 @@
             var BANNER_IMAGE_INDEX = "banner_image_index_cookie";
             var bannerImageIndex = getCookie(BANNER_IMAGE_INDEX);
             
-            setBannerImage();
+            //setBannerImage();
 
             if (disableTheme != "true") {
                 var SHOW_PROJECT_TOOLS = "show_project_tools_cookie";
