--- a/www/index.html
+++ b/www/index.html
@@ -347,7 +347,7 @@
     <div id="contents_contents">
         <div id="contents_main">
             
-            <h3>Let The Others Know</h3>
+            <h3>Vote For VisualVM!</h3>
             <div id="spotlight">
                 <div><b>The Product of the Year 2009 awards</b> are in progress at Developer.com till Monday, December 15, 2008. If you like the VisualVM tool, please support it and <b>give it your vote</b> in the <a href="http://solutions.internet.com/index.php/5376_default#p3">Development Utility of the Year category</a>!</div>
             </div>
