Frontpage: fixing javascript...
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1712 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -222,13 +222,13 @@
                     imageIndex = 1;
               
                 var rules = new Array();
-                if (document.styleSheets[1].cssRules)
-                    rules = document.styleSheets[1].cssRules;
+                if (document.styleSheets[3].cssRules)
+                    rules = document.styleSheets[3].cssRules;
                 else
-                    rules = document.styleSheets[1].rules;
+                    rules = document.styleSheets[3].rules;
                 rules[0].style.backgroundImage =
                     "url(images/main_background_" + imageIndex + ".jpg)";
-
+alert("Using image index " + imageIndex);
                 setCookie(BANNER_IMAGE_INDEX, ++imageIndex + '');
             }
             
