--- a/www/index.html
+++ b/www/index.html
@@ -186,6 +186,7 @@
             // Sets "long-life" cookie (expires December 31th, 2020)
             function setCookie(name, value) {
                 var cookie_string = name + "=" + escape(value);
+                cookie_string += "; expires=" + new Date(2020, 12, 31).toGMTString();
                 cookie_string += "; domain=.visualvm.dev.java.net";
                 cookie_string += "; path=/";
                 document.cookie = cookie_string;
