--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">October 10th, 2008:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.0.1 Plugin Center to version 2.0.
+                    Detailed information about the tool can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_0_released">TDA 2.0 release announcement</a>.
+                </p>
+
                 <p><span class="news_date">September 5th, 2008:</span> VisualVM 1.0.1 released. This is mostly a bugfix release, see the <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&component=visualvm&resolution=FIXED&target_milestone=1.0.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">list of enhancements and fixed bugs</a>. Also three
                     new <a href="plugins.html">plugins</a> are available on the Plugin center. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release101"><code>release101</code></a> branch.
