Updating Releases Overview
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1740 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -93,6 +93,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 12</b><br><small style="margin-left: 10px;">Released: February 2nd, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u12.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 11</b><br><small style="margin-left: 10px;">Released: December 2nd, 2008, <a href="http://java.sun.com/javase/6/webnotes/6u11.html">Release Notes</a></small></div>
                             </td>
                         </tr>
