--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">February 5th, 2009:</span> VisualVM-Extensions plugin has been updated to correctly recognize applications running on JDK 6 Update 12.
+                Currently the update is available for VisualVM 1.1, other (Java) VisualVM releases will be updated within a few days. Use Tools -> Plugins to download and install
+                the update (can also be downloaded directly as <a href="https://visualvm.dev.java.net/files/documents/7163/125862/com-sun-tools-visualvm-modules-extensions.nbm"><code>.nbm</code> package</a>).
+                </p>
+
                 <p><span class="news_date">January 8th, 2009:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.1 and 1.0.1 Plugin Centers to version 2.1.
                     Detailed information about the tool can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_1_released">TDA 2.1 release announcement</a>.
                 </p>
@@ -56,10 +61,6 @@
                 <p><span class="news_date">December 8th, 2008:</span> VisualVM 1.1 released. It introduces new <a href="features.html">features</a> like CPU & GC monitoring, extends the API for plugins, fixes <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=visualvm&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED&resolution=FIXED&target_milestone=1.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Issue+Number">several bugs</a> and delivers complete
                 <a href="nonav/apidocs/11/index.html">API documentation</a> for plugin developers. VisualVM 1.1 can be now <a href="features.html#ideintegration">integrated</a> with the Eclipse IDE and IntelliJ IDEA. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release11"><code>release11</code></a> branch. See the <a href="relnotes.html">Release Notes</a> for more information.
-                </p>
-
-                <p><span class="news_date">December 2nd, 2008:</span> JDK 6 Update 11 released, it contains Java VisualVM tool based on the recent stable VisualVM 1.0.1.
-                    Latest Sun JDK 6 update can be downloaded <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
