VisualVM-Extensions update to support JDK 6u12
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1746 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">December 2nd, 2008:</span> JDK 6 Update 11 released, it contains Java VisualVM tool based on the recent stable VisualVM 1.0.1.
+                    Latest Sun JDK 6 update can be downloaded <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+
                 <p><span class="news_date">October 10th, 2008:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.0.1 Plugin Center to version 2.0.
                     Detailed information about the tool can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_0_released">TDA 2.0 release announcement</a>.
                 </p>
