--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
 
                 <p><span class="news_date">February 5th, 2009:</span> VisualVM-Extensions plugin has been updated to correctly recognize applications running on JDK 6 Update 12.
                 Currently the update is available for VisualVM 1.1, other (Java) VisualVM releases will be updated within a few days. Use Tools -> Plugins to download and install
-                the update (can also be downloaded directly as <a href="https://visualvm.dev.java.net/files/documents/7163/125862/com-sun-tools-visualvm-modules-extensions.nbm"><code>.nbm</code> package</a>).
+                the update.
                 </p>
 
                 <p><span class="news_date">January 8th, 2009:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.1 and 1.0.1 Plugin Centers to version 2.1.
