VisualVM-Extensions update to support JDK 6u12 - all versions fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1751 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,8 +50,7 @@
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
                 <p><span class="news_date">February 5th, 2009:</span> VisualVM-Extensions plugin has been updated to correctly recognize applications running on JDK 6 Update 12.
-                Currently the update is available for VisualVM 1.1, other (Java) VisualVM releases will be updated within a few days. Use Tools -> Plugins to download and install
-                the update.
+                The update is available on Plugin Center for all affected VisualVM / Java VisualVM versions. Use Tools -> Plugins to download and install the update.
                 </p>
 
                 <p><span class="news_date">January 8th, 2009:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.1 and 1.0.1 Plugin Centers to version 2.1.
