VisualVM screencast in Getting Started
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1753 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -13,6 +13,14 @@
         This guide will demonstrate how to install VisualVM and add functionality to the tool by installing a plugin from the VisualVM update center.
         This guide will show you how to launch VisualVM and view some of the information you can get about an application running on local and remote JVMs.</p>
         
+        <br>
+
+        <h3>VisualVM In Action</h3>
+        <p>See the VisualVM features at this short screencast originally introduced at java.sun.com:</p>
+        <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="210"></embed></p>
+
+        <br>
+        
         <h3>Installing VisualVM</h3>
         <ol>
             <li>Download the VisualVM installer from the <a href="https://visualvm.dev.java.net/">VisualVM project page</a>.</li>
