Getting Started: typo
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1754 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -16,7 +16,7 @@
         <br>
 
         <h3>VisualVM In Action</h3>
-        <p>See the VisualVM features at this short screencast originally introduced at java.sun.com:</p>
+        <p>See the VisualVM features in this short screencast originally introduced at java.sun.com:</p>
         <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="210"></embed></p>
 
         <br>
