Screencast message reworded
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1758 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/features.html
+++ b/www/features.html
@@ -81,7 +81,7 @@
             <a name="demo"></a>
             <h3>Demo</h3>
             <div>
-                <p style="margin-top: 5px;"><a href="http://e.blip.tv/scripts/flash/showplayer.swf?file=http://blip.tv/rss/flash/1591181&showplayerpath=http://blip.tv/scripts/flash/showplayer.swf&feedurl=http://kg.blip.tv/rss/flash&brandname=blip.tv&brandlink=http://blip.tv/%3Futm_source%3Dbrandlink&enablejs=true" target="blank" title="VisualVM Screencast."><img src="images/screencast_small.png"/></a>See a screencast to become familiar with the most important VisualVM features!
+                <p style="margin-top: 5px;"><a href="http://e.blip.tv/scripts/flash/showplayer.swf?file=http://blip.tv/rss/flash/1591181&showplayerpath=http://blip.tv/scripts/flash/showplayer.swf&feedurl=http://kg.blip.tv/rss/flash&brandname=blip.tv&brandlink=http://blip.tv/%3Futm_source%3Dbrandlink&enablejs=true" target="blank" title="VisualVM Screencast."><img src="images/screencast_small.png"/></a>See a screencast to discover the most important VisualVM features!
                 </p>
                 <br><br>
             </div>
