Screencast on frontpage
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1763 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
         <tr>
             <td id="top_div_info">
                 VisualVM is a visual tool integrating several commandline JDK tools and lightweight profiling capabilities. Designed for both production and development time use, it further enhances the capability of monitoring and performance analysis for the Java SE platform.
+                <a href="http://e.blip.tv/scripts/flash/showplayer.swf?file=http://blip.tv/rss/flash/1591181&showplayerpath=http://blip.tv/scripts/flash/showplayer.swf&feedurl=http://kg.blip.tv/rss/flash&brandname=blip.tv&brandlink=http://blip.tv/%3Futm_source%3Dbrandlink&enablejs=true" target="blank">See screencast</a>.
             </td>
             <td id="top_div_links">
                 <a href="features.html"><img src="images/main_links_icon.png"/>Features</a>
