--- a/www/features.html
+++ b/www/features.html
@@ -83,7 +83,7 @@
             <div style="background: #f0f1f2; padding: 5px; padding-left: 0px; margin-bottom: 10px;">
                 <p><a href="http://e.blip.tv/scripts/flash/showplayer.swf?file=http://blip.tv/rss/flash/1591181&showplayerpath=http://blip.tv/scripts/flash/showplayer.swf&feedurl=http://kg.blip.tv/rss/flash&brandname=blip.tv&brandlink=http://blip.tv/%3Futm_source%3Dbrandlink&enablejs=true" target="blank" title="VisualVM Screencast."><img src="images/screencast_small.png"/></a><b>See a screencast to discover the most important VisualVM features!</b>
                 </p>
-                <br style="clear: both;">
+                <hr style="border: 0px; padding: 0px; margin: 0px; height: 0px; color: #f0f1f2;"><!-- NOTE: the <hr> is a workaround for IE -->
             </div>
             
             <a name="features"></a>
