--- a/www/download.html
+++ b/www/download.html
@@ -53,7 +53,8 @@
             <h3>Download</h3>
             <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
                 <div><a href="https://visualvm.dev.java.net/files/documents/7163/119696/visualvm_11.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.1</span></a> (.zip, 8.8MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a>, <a href="http://plugins.intellij.net/plugin/?id=3749">IntelliJ IDEA</a> <small>(3<sup>rd</sup> party)</small></div>
-                <div><font size="-2"><br><b>Note:</b> if using JDK 6 Update 12 in monitored environment, be sure to get the VisualVM-Extensions plugin. <a href="http://blogs.sun.com/nbprofiler/entry/visualvm_fixed_to_correctly_recognize" target="blank">Details...</a></font></div>
+                <div style="height: 10px;">&nbsp;</div>
+                <div><font size="-2"><b>Note:</b> if using JDK 6 Update 12 in monitored environment, be sure to get the VisualVM-Extensions plugin. <a href="http://blogs.sun.com/nbprofiler/entry/visualvm_fixed_to_correctly_recognize" target="blank">Details...</a></font></div>
             </div>
             
             <a style="clear: both;" name="first_steps"></a>
