--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">January 8th, 2009:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.1 and 1.0.1 Plugin Centers to version 2.1.
+                    Detailed information about the tool can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_1_released">TDA 2.1 release announcement</a>.
+                </p>
+
                 <p><span class="news_date">December 8th, 2008:</span> VisualVM 1.1 released. It introduces new <a href="features.html">features</a> like CPU & GC monitoring, extends the API for plugins, fixes <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=visualvm&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED&resolution=FIXED&target_milestone=1.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Issue+Number">several bugs</a> and delivers complete
                 <a href="nonav/apidocs/11/index.html">API documentation</a> for plugin developers. VisualVM 1.1 can be now <a href="features.html#ideintegration">integrated</a> with the Eclipse IDE and IntelliJ IDEA. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release11"><code>release11</code></a> branch. See the <a href="relnotes.html">Release Notes</a> for more information.
