Updated Releases Overview  - VisualVM 1.1 not released in JDK
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1829 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -93,7 +93,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div>not released</div>
                             </td>
                         </tr>
 
