--- a/www/releases.html
+++ b/www/releases.html
@@ -103,6 +103,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 13</b><br><small style="margin-left: 10px;">Released: March 23rd, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u13.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 12</b><br><small style="margin-left: 10px;">Released: February 2nd, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u12.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 11</b><br><small style="margin-left: 10px;">Released: December 2nd, 2008, <a href="http://java.sun.com/javase/6/webnotes/6u11.html">Release Notes</a></small></div>
