JDK 6u13 release date fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1837 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -103,7 +103,7 @@
                             </td>
 
                             <td>
-                                <div><b>JDK 6 Update 13</b><br><small style="margin-left: 10px;">Released: March 23rd, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u13.html">Release Notes</a></small></div>
+                                <div><b>JDK 6 Update 13</b><br><small style="margin-left: 10px;">Released: March 24th, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u13.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 12</b><br><small style="margin-left: 10px;">Released: February 2nd, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u12.html">Release Notes</a></small></div>
                                 <hr>
