Correct links for images
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1838 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/ja/gettingstarted.html
+++ b/www/ja/gettingstarted.html
@@ -28,7 +28,7 @@
 
         <h3>「アプリケーション」ウィンドウの使用</h3>
         <p>アプリケーションを起動すると、VisualVM のメインウィンドウが開きます。デフォルトで、メインウィンドウの左パネルに、「アプリケーション」ウィンドウが表示されます。「アプリケーション」ウィンドウでは、ローカルおよびリモートの JVM で実行中の Java アプリケーションをすばやく確認できます。</p>
-        <img src="images/getstarted/vvm-anagram-applications.png" style="border:1px solid;" alt="「アプリケーション」ウィンドウのスクリーンショット"
+        <img src="../images/getstarted/vvm-anagram-applications.png" style="border:1px solid;" alt="「アプリケーション」ウィンドウのスクリーンショット"
              title="「アプリケーション」ウィンドウのスクリーンショット">
         <p>「アプリケーション」ウィンドウは、特定のアプリケーションの詳細を表示するための、主な入場点です。アプリケーションのノードを右クリックすると、ポップアップメニューが開きます。ここで、主アプリケーションのタブを開くか、スレッドダンプまたはヒープダンプを取得するかを選択できます。</p>
 
@@ -53,7 +53,7 @@
             <li>クラス名をダブルクリックしてインスタンスビューを表示し、インスタンスのリストを表示します。</li>
             <li>リストからインスタンスを選択して、そのインスタンスへの参照を表示します。</li>
         </ol>
-        <img src="images/getstarted/vvm-anagram-heapdump.png" style="border:1px solid;" alt="ヒープダンプの「インスタンス」タブのスクリーンショット"
+        <img src="../images/getstarted/vvm-anagram-heapdump.png" style="border:1px solid;" alt="ヒープダンプの「インスタンス」タブのスクリーンショット"
              title="ヒープダンプの「インスタンス」タブのスクリーンショット">
 
         <p>ヒープダンプを取得すると、VisualVM は新しいタブでヒープダンプを開き、「アプリケーション」ウィンドウのアプリケーションのノードの下にヒープダンプ用のノードを作成します。生成したヒープダンプを保存するには、ヒープダンプのノードを右クリックし、「別名保存」を選択します。生成したヒープダンプを明示的に保存しない場合、アプリケーションが閉じるときに、ダンプは削除されます。</p>
@@ -75,7 +75,7 @@
                 <p>プロファイルタスクを選択すると、VisualVM は「プロファイラ」タブにプロファイルデータを表示します。</p>
             </li>
         </ol>
-        <img src="images/getstarted/vvm-anagram-profiler.png" style="border:1px solid;" alt="プロファイル結果がある「プロファイラ」タブのスクリーンショット"
+        <img src="../images/getstarted/vvm-anagram-profiler.png" style="border:1px solid;" alt="プロファイル結果がある「プロファイラ」タブのスクリーンショット"
              title="メモリーの割り当て解析時のプロファイル結果を示すスクリーンショット">
 
 
@@ -95,7 +95,7 @@
         </ol>
         <p>「了解」をクリックすると、「リモート」ノードの下にリモートホストのノードが表示されます。リモートホストのノードを展開し、リモートホストで実行中の Java アプリケーションを表示します。</p>
         <p>リモートアプリケーションの名前をダブルクリックすると、VisualVM でそのアプリケーションのタブを開くことができます。</p>
-        <img src="images/getstarted/vvm-applications-remote.png" style="border:1px solid;" alt="リモートホストがある「アプリケーション」ウィンドウのスクリーンショット"
+        <img src="../images/getstarted/vvm-applications-remote.png" style="border:1px solid;" alt="リモートホストがある「アプリケーション」ウィンドウのスクリーンショット"
              title="リモートホストがある「アプリケーション」ウィンドウのスクリーンショット">
 
         <p>詳細については、次のドキュメントを参照してください。</p>
@@ -111,7 +111,7 @@
             <li>「Available Plugins」タブで、プラグインの「Install」チェックボックスを選択します。「インストール」をクリックします。</li>
             <li>手順を続行してプラグインのインストーラを完了します。<br/>
         </ol>
-        <img src="images/getstarted/vvm-plugins-window.png" alt="「プラグイン」ウィンドウのスクリーンショット"
+        <img src="../images/getstarted/vvm-plugins-window.png" alt="「プラグイン」ウィンドウのスクリーンショット"
              title="「プラグイン」ウィンドウのスクリーンショット">
         <p class="small">VisualVM-MBeans プラグインが選択されているプラグインマネージャーのスクリーンショットです。</p>
 
